# ha-template-mcp

./: .gitignore  .mcp.json  README.md  main.py  pyproject.toml
src/ha_template_mcp/: __init__.py  __main__.py  server.py
templates/: README.md  get_all_battery_levels.yml  get_areas.yml  get_automation_status.yml  get_climate_overview.yml  get_energy_power_sensors.yml  get_entity_to_area_mapping.yml  get_landscape_lights.yml  get_lights_summary_by_area.yml  get_media_player_status.yml  get_polestar_information.yml  get_rivian_information.yml  get_rivian_information_alt_format.yml  get_security_overview.yml  get_sprinkler_information.yml  get_switch_status_by_area.yml  get_system_health_overview.yml  get_temperature_humidity_sensors.yml  get_unavailable_entities.yml  get_weather_overview.yml  test_simple_template.yml
test/: test_init_get_transport_args.py
