[project]
name = "ha-template-mcp"
classifiers = ["Private :: Do Not Upload"]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
    "fastmcp>=2.12.4",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
test = [
    "pytest>=8.3.3",
]

[project.scripts]
ha-template-mcp = "ha_template_mcp:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
