[project]
name = "ha-template-mcp"
classifiers = ["Public :: Do Upload"]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
    "fastmcp>=2.12.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
test = [
    "pytest>=8.3.3",
]

[project.scripts]
ha-template-mcp = "ha_template_mcp:entry_point"

[tool.uv]
package = true